# Taller-Event-Driven-Multilenguaje-con-RabbitMQ-y-Docker

./: README.md
consumers/: Dockerfile  consumer_audit.js  consumer_logger.js  consumer_metrics.js  package.json
cpp/: CMakeLists.txt  Dockerfile  consumer_delta.cpp  producer_delta.cpp
producers/: Dockerfile  common.py  producer_alpha.py  producer_beta.py  producer_gamma.py
scenario1-centralized-direct/: docker-compose.yml
scenario2-2nodes-topic/: node1.compose.yml  node2.compose.yml
scenario3-3nodes-topic/: node1.compose.yml  node2.compose.yml  node3.compose.yml
